# ChangeLog for dev-python/py-smbpasswd
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/py-smbpasswd/ChangeLog,v 1.4 2004/12/14 20:01:50 carlo Exp $

  14 Dec 2004; Carsten Lohrke <carlo@gentoo.org> py-smbpasswd-1.0.ebuild:
  stable on x86

  03 Nov 2004; <SeJo@gentoo.org> py-smbpasswd-1.0.ebuild:
  added ppc keyword

*py-smbpasswd-1.0 (18 Jul 2004)

  18 Jul 2004; David Holm <dholm@gentoo.org> py-smbpasswd-1.0.ebuild:
  Added to ~ppc.

  17 Jul 2004; Carsten Lohrke <carlo@gentoo.org> :
  Initial ebuild.
