@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/py-smbpasswd/Attic/py-smbpasswd-1.0.ebuild,v 1.4 2004/12/14 20:01:50 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/py-smbpasswd/Attic/py-smbpasswd-1.0.ebuild,v 1.5 2005/05/22 21:11:22 weeve Exp $
 
 inherit distutils
 
@@ -10,7 +10,7 @@ SRC_URI="http://barryp.org/software/py-smbpasswd/files/py-smbpasswd-1.0.tar.gz"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 ppc"
+KEYWORDS="ppc ~sparc x86"
 IUSE=""
 
 DEPEND="virtual/python"
