@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/luma/Attic/luma-2.1.3.ebuild,v 1.1 2005/03/16 17:12:50 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/luma/Attic/luma-2.1.3.ebuild,v 1.2 2005/05/22 21:12:20 weeve Exp $
 
 inherit eutils
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://sourceforge/luma/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~x86 ~ppc"
+KEYWORDS="~ppc ~sparc ~x86"
 IUSE="samba"
 
 RDEPEND=">=x11-libs/qt-3.2
