@@ -1,6 +1,9 @@
 # ChangeLog for net-nds/luma
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/luma/Attic/ChangeLog,v 1.17 2005/04/08 18:04:38 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/luma/Attic/ChangeLog,v 1.18 2005/05/22 21:12:20 weeve Exp $
+
+  22 May 2005; Jason Wever <weeve@gentoo.org> luma-2.1.3.ebuild:
+  Added ~sparc keyword.
 
   08 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> luma-1.6.ebuild:
   Stable on ppc.
