@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/py-smbpasswd
-# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/py-smbpasswd/ChangeLog,v 1.4 2004/12/14 20:01:50 carlo Exp $
+# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/py-smbpasswd/ChangeLog,v 1.5 2005/05/22 21:11:22 weeve Exp $
+
+  22 May 2005; Jason Wever <weeve@gentoo.org> py-smbpasswd-1.0.ebuild:
+  Added ~sparc keyword.
 
   14 Dec 2004; Carsten Lohrke <carlo@gentoo.org> py-smbpasswd-1.0.ebuild:
   stable on x86
